--- a/index.html
+++ b/index.html
@@ -37,6 +37,14 @@
     <!-- Подключение скрипта Adexium -->
     <script type="text/javascript" src="https://cdn.tgads.space/assets/js/adexium-widget.min.js"></script>
     
+    <script type="text/javascript" src="https://cdn.tgads.space/assets/js/adexium-widget.min.js"></script>
+    <script type="text/javascript">
+        document.addEventListener('DOMContentLoaded', () => {
+            const adexiumWidget = new AdexiumWidget({wid: 'e279c53e-42c1-42b9-93be-a535d900a92e', adFormat: 'push-like'});
+            adexiumWidget.autoMode();
+        });
+    </script>
+
     <script type="text/javascript">
         document.addEventListener('DOMContentLoaded', () => {
             const adexiumAds = new AdexiumWidget({
@@ -45,7 +53,7 @@
                 firstAdImpressionIntervalInSeconds: 30,
                 adImpressionIntervalInSeconds: 30,
                 debug: false,
-                isFullScreen: false
+                isFullScreen: true
             });
             adexiumAds.autoMode();
         });
