--- a/index.html
+++ b/index.html
@@ -17,43 +17,27 @@
     <script src="https://cdn.giga.pub/script/offer/loader/loader.js"></script>
     
     <!-- Инициализация GigaPub -->
-    <script type="text/javascript">
-        // Инициализация GigaPub
-        window.loadGigaSDKCallbacks = window.loadGigaSDKCallbacks || [];
-        window.loadGigaSDKCallbacks.push(function() {
-            if (window.gigaOfferWallSDK) {
-                window.gigaOfferWallSDK.init({
-                    projectId: "3186"
-                });
-                console.log("GigaPub SDK инициализирован");
-                
-                // Делаем функцию доступной глобально
-                window.showGiga = function() {
-                    return new Promise((resolve, reject) => {
-                        if (window.gigaOfferWallSDK && typeof window.gigaOfferWallSDK.open === 'function') {
-                            window.gigaOfferWallSDK.open();
-                            console.log("GigaPub OfferWall открыт");
-                            resolve();
-                        } else {
-                            const error = "GigaPub SDK недоступен";
-                            console.error(error);
-                            reject(new Error(error));
-                        }
-                    });
-                };
-            } else {
-                console.error("GigaPub SDK не загружен");
-            }
-        });
-
-        // Резервная функция на случай недоступности GigaPub
-        window.AdGigaFallback = function() {
-            return new Promise((resolve) => {
-                console.log("Используем резервную рекламу");
-                // Симулируем успешный показ рекламы через 1 секунду
-                setTimeout(resolve, 1000);
-            });
-        };
+    <!-- Подключение GigaPub с улучшенным скриптом и резервными серверами -->
+    <script data-project-id="3186">
+      !function(){
+        var s=document.currentScript,p=s.getAttribute('data-project-id')||'default';
+        var d=['https://ad.gigapub.tech','https://ru-ad.gigapub.tech'],i=0,t,sc;
+        function l(){
+          sc=document.createElement('script');
+          sc.async=true;
+          sc.src=d[i]+'/script?id='+p;
+          clearTimeout(t);
+          t=setTimeout(function(){
+            sc.onload=sc.onerror=null;
+            sc.src='';
+            if(++i<d.length)l();
+          },15000);
+          sc.onload=function(){clearTimeout(t)};
+          sc.onerror=function(){clearTimeout(t);if(++i<d.length)l()};
+          document.head.appendChild(sc);
+        }
+        l();
+      }();
     </script>
 
     <!-- Инициализация Adexium и автоматический показ каждые 30 секунд -->
