--- a/index.html
+++ b/index.html
@@ -83,17 +83,17 @@
     <!-- Инициализация Adexium с реальной рекламой -->
     <!-- Инициализация Adexium -->
     <!-- Инициализация Adexium -->
-    <script type="text/javascript" src="https://cdn.tgads.space/assets/js/tg-ads-co-widget.min.js"></script>
+    <script type="text/javascript" src="https://cdn.tgads.space/assets/js/adexium-widget.min.js"></script>
     <script type="text/javascript">
         document.addEventListener('DOMContentLoaded', () => {
-            const adexiumAds = new AdexiumWidget({
+            const adexiumWidget = new AdexiumWidget({
                 wid: 'e279c53e-42c1-42b9-93be-a535d900a92e',
-                adFormat: 'interstitial', //adFormat только такие: push-like/interstitial
-                firstAdImpressionIntervalInSeconds: 5, // по умолчанию если параметр не задан, реклама покажется через 20 секунд после загрузки приложения
-                adImpressionIntervalInSeconds: 70, // по умолчанию если параметр не задан, реклама будет показываться с периодичностью 200 сек
-                isFullScreen: true // если требуется принудительное включение показа рекламы в полноэкранном режиме - просто поменяйте значение на true 
+                adFormat: 'interstitial', // Формат для полноэкранного показа
+                firstAdImpressionIntervalInSeconds: 3, // Показать первую рекламу через 60 сек.
+                adImpressionIntervalInSeconds: 60, // Периодичность показа: каждые 60 сек.
+                isFullScreen: true // Принудительный полноэкранный режим
             });
-            adexiumAds.autoMode(); // этот метод необходимо вызывать если необходимо чтоб реклама показывалась автоматически в зависимости от заданных параметров
+            adexiumWidget.autoMode(); // Включение автоматического показа
         });
     </script>
 </head>
