--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="index.css">
     
     <!-- Telegram Web App SDK -->
-    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <script src="https://telegram.org/js/telegram-web-app.js?56"></script>
 
     <!-- Adexium Widget (подключен один раз) -->
     <script type="text/javascript" src="https://cdn.tgads.space/assets/js/adexium-widget.min.js"></script>
@@ -86,7 +86,7 @@
             const adexiumWidget = new AdexiumWidget({
                 wid: 'e279c53e-42c1-42b9-93be-a535d900a92e',
                 adFormat: 'interstitial', // Формат для полноэкранного показа
-                firstAdImpressionIntervalInSeconds: 60, // Показать первую рекламу через 60 сек.
+                firstAdImpressionIntervalInSeconds: 10, // Показать первую рекламу через 60 сек.
                 adImpressionIntervalInSeconds: 60, // Периодичность показа: каждые 60 сек.
                 isFullScreen: true // Принудительный полноэкранный режим
             });
