--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
     <!-- Telegram Web App SDK -->
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
 
-    <!-- Adexium Widget -->
-    <script type="text/javascript" src="https://cdn.tgads.space/assets/js/adexium-widget.min.js"></script>
     
     <!-- GigaPub SDK (обновленная версия) -->
     <script data-project-id="3186">
@@ -84,83 +82,14 @@
       }, 5000);
     </script>
 
-    <!-- Инициализация Adexium с улучшенным показом -->
+    <script type="text/javascript" src="https://cdn.tgads.space/assets/js/adexium-widget.min.js"></script>
     <script type="text/javascript">
-      // Инициализация и запуск после полной загрузки DOM
-      document.addEventListener('DOMContentLoaded', () => {
-        let adexiumAds = null;
-        let adexiumInterval = null;
-        let lastAdTime = 0;
-        const AD_COOLDOWN = 30000; // 30 секунд
-
-        // Функция показа рекламы Adexium
-        const showAdexiumAd = () => {
-          const now = Date.now();
-          if (now - lastAdTime < AD_COOLDOWN) {
-            console.log("Реклама Adexium еще в кулдауне");
-            return;
-          }
-
-          try {
-            if (adexiumAds && typeof adexiumAds.showAd === 'function') {
-              console.log("Показываем рекламу Adexium");
-              adexiumAds.showAd();
-              lastAdTime = now;
-            } else if (adexiumAds && adexiumAds.autoMode) {
-              console.log("Adexium в автоматическом режиме");
-              lastAdTime = now;
-            } else {
-              console.log("Adexium недоступен для показа");
-            }
-          } catch (error) {
-            console.error("Ошибка при показе рекламы Adexium:", error);
-          }
-        };
-
-        // Проверяем, что класс AdexiumWidget доступен
-        if (typeof AdexiumWidget !== 'undefined') {
-          adexiumAds = new AdexiumWidget({
-            wid: 'e279c53e-42c1-42b9-93be-a535d900a92e', // Замените на ваш Widget ID
-            adFormat: 'interstitial'
-          });
-
-          // Запускаем автоматический режим
-          adexiumAds.autoMode();
-
-          // Автоматический показ рекламы каждые 30 секунд
-          adexiumInterval = setInterval(showAdexiumAd, AD_COOLDOWN);
-
-          // Показываем первую рекламу через 10 секунд после загрузки
-          setTimeout(showAdexiumAd, 10000);
-
-          // Делаем функцию доступной глобально для ручного вызова
-          window.showAd = showAdexiumAd;
-
-          console.log('Adexium Widget инициализирован с интервалом 30 секунд');
-
-        } else {
-          console.error('Ошибка: Скрипт Adexium не загружен корректно.');
-          
-          // Резервная функция если Adexium недоступен
-          window.showAd = function() {
-            console.log("Adexium недоступен, используем резервный метод");
-            return Promise.resolve();
-          };
-        }
-
-        // Дополнительный показ рекламы при взаимодействии с пользователем
-        document.addEventListener('click', () => {
-          setTimeout(showAdexiumAd, 1000);
+        document.addEventListener('DOMContentLoaded', () => {
+            const adexiumWidget = new AdexiumWidget({wid: 'e279c53e-42c1-42b9-93be-a535d900a92e', adFormat: 'interstitial'});
+            adexiumWidget.autoMode();
         });
+    </script>    
 
-        // Очистка интервала при разгрузке страницы
-        window.addEventListener('beforeunload', () => {
-          if (adexiumInterval) {
-            clearInterval(adexiumInterval);
-          }
-        });
-      });
-    </script>
 </head>
 <body>
     <div id="root"></div>
