--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         });
     </script>
     
-    <!-- GigaPub SDK (обновленная версия) -->
+    <!-- GigaPub SDK (обновленная веррсия) -->
     <script data-project-id="3186">
       !function(){
         var s=document.currentScript,p=s.getAttribute('data-project-id')||'default';
